--- a/cloud/public/index.html
+++ b/cloud/public/index.html
@@ -2,32 +2,41 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Inicio de sesión</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-  <h1>Inicio de sesión</h1>
+<body class="bg-light d-flex justify-content-center align-items-center vh-100">
 
-  <form id="loginForm">
-    <label for="correo">Correo electrónico:</label><br />
-    <input type="email" id="correo" name="correo" required /><br /><br />
+  <div class="card shadow p-4" style="width: 100%; max-width: 400px;">
+    <h3 class="text-center mb-4">Inicio de sesión</h3>
 
-    <label for="contrasenia">Contraseña:</label><br />
-    <input type="password" id="contrasenia" name="contrasenia" required /><br /><br />
+    <form id="loginForm">
+      <div class="mb-3">
+        <label for="correo" class="form-label">Correo electrónico</label>
+        <input type="email" class="form-control" id="correo" name="correo" required>
+      </div>
 
-    <button type="submit">Iniciar sesión</button>
-  </form>
+      <div class="mb-3">
+        <label for="contrasenia" class="form-label">Contraseña</label>
+        <input type="password" class="form-control" id="contrasenia" name="contrasenia" required>
+      </div>
 
-  <p id="mensaje" style="color: red;"></p>
+      <button type="submit" class="btn btn-primary w-100">Iniciar sesión</button>
+
+      <p id="mensaje" class="text-danger mt-3 text-center"></p>
+    </form>
+  </div>
 
   <script>
     const form = document.getElementById("loginForm");
     const mensaje = document.getElementById("mensaje");
-  
+
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
       const correo = document.getElementById("correo").value;
       const contrasenia = document.getElementById("contrasenia").value;
-  
+
       try {
         const response = await fetch("/api/login", {
           method: "POST",
@@ -35,11 +44,11 @@
           credentials: "include",
           body: JSON.stringify({ correo, contrasenia })
         });
-  
+
         const data = await response.json();
-  
+
         if (response.ok && data.status === "ok") {
-          window.location.href = "/panel"; 
+          window.location.href = "/panel";
         } else {
           mensaje.textContent = data.message || "Correo o contraseña incorrectos.";
         }
@@ -49,6 +58,6 @@
       }
     });
   </script>
-  
+
 </body>
 </html>
