--- a/cloud/public/panel.html
+++ b/cloud/public/panel.html
@@ -2,18 +2,30 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Panel Principal</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-  <h1 id="titulo">Bienvenido al Panel Principal</h1>
+<body class="bg-light">
 
-  <p><strong>Rol:</strong> <span id="rol"></span></p>
-  <p><strong>Permisos:</strong> <span id="permisos"></span></p>
+  <div class="container py-5">
+    <div class="card shadow-sm">
+      <div class="card-body">
+        <h1 class="card-title text-center mb-4">Bienvenido al Panel Principal</h1>
 
-  <a href="/sectores">Ver los sectores</a>
+        <div class="mb-3">
+          <p><strong>Rol:</strong> <span id="rol" class="badge bg-primary text-light">Cargando...</span></p>
+          <p><strong>Permisos:</strong> <span id="permisos" class="badge bg-secondary text-light">Cargando...</span></p>
+        </div>
 
-  <button id="logoutBtn">Cerrar sesión</button>
+        <div class="d-flex justify-content-between">
+          <a href="/sectores" class="btn btn-outline-success">Ver los sectores</a>
+          <button id="logoutBtn" class="btn btn-outline-danger">Cerrar sesión</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script>
     // Obtener la info del usuario autenticado desde el backend
@@ -40,6 +52,5 @@
       window.location.href = "/";
     });
   </script>
-  
 </body>
 </html>
